RESOLVED FIXED27025
Crashes and regression test failures related to regexps in 64-bit
https://bugs.webkit.org/show_bug.cgi?id=27025
Summary Crashes and regression test failures related to regexps in 64-bit
Mark Rowe (bdash)
Reported 2009-07-07 04:51:34 PDT
Loading <http://www.apple.com/pr/library/2008/12/16macworld.html> in a 64-bit build of TOT will cause a crash. The following JavaScriptCore regression tests are also failing in 64-bit: ecma_2/String/match-001.js ecma_3/RegExp/perlstress-002.js js1_2/regexp/interval.js js1_2/regexp/string_search.js js1_2/regexp/test.js The root cause is the same.
Attachments
Patch! (1.68 KB, patch)
2009-07-07 04:58 PDT, Mark Rowe (bdash)
darin: review+
Mark Rowe (bdash)
Comment 1 2009-07-07 04:53:20 PDT
<rdar://problem/7033448> The following is sufficient to reproduce the crash: 'http://www.apple.com/pr/library/2008/12/16macworld.html'.match(new RegExp('apple.com\\/(\\w{2}|befr|benl|chfr|chde|asia|lae)\\/welcomescreen'))
Mark Rowe (bdash)
Comment 2 2009-07-07 04:58:04 PDT
Mark Rowe (bdash)
Comment 3 2009-07-07 10:54:23 PDT
Landed in r45600.
Note You need to log in before you can comment on or make changes to this bug.