Bug 27025: Crashes and regression test failures related to regexps in 64-bit Fix <https://bugs.webkit.org/show_bug.cgi?id=27025> / <rdar://problem/7033448>.

Reviewed by Darin Adler.

For x86_64 RegexGenerator uses rbx, a callee-save register, as a scratch register but
neglects to save and restore it.  The change in handling of the output vector in r45545
altered code generation so that the RegExp::match was now storing important data in rbx,
which caused crashes and bogus results when it was clobbered.

* yarr/RegexJIT.cpp:
(JSC::Yarr::RegexGenerator::generateEnter): Save rbx.
(JSC::Yarr::RegexGenerator::generateReturn): Restore rbx.

Canonical link: https://commits.webkit.org/37257@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45600 268f45cc-cd09-0410-ab3c-d52691b4dbfc