JavaScriptCore/yarr/RegexJIT.cpp
@@ -1292,6 +1292,7 @@ class RegexGenerator : private MacroAssembler {
 #if PLATFORM(X86_64)
         push(X86::ebp);
         move(stackPointerRegister, X86::ebp);
+        push(X86::ebx);
 #elif PLATFORM(X86)
         push(X86::ebp);
         move(stackPointerRegister, X86::ebp);
@@ -1319,6 +1320,7 @@ class RegexGenerator : private MacroAssembler {
     void generateReturn()
     {
 #if PLATFORM(X86_64)
+        pop(X86::ebx);
         pop(X86::ebp);
 #elif PLATFORM(X86)
         pop(X86::esi);
